--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "src/server.js",
   "dependencies": {
+    "express": "^4.14.0",
     "heap": "^0.2.6"
   },
   "devDependencies": {},
