--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "This is a simple search engine to find topmost k reviews published",
   "main": "src/server.js",
   "dependencies": {
+    "compression": "^1.6.2",
     "express": "^4.14.0",
     "heap": "^0.2.6"
   },
